<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="richie.ee.com.leaveamessage.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        android:id="@+id/textView"
        app:layout_constraintHorizontal_bias="0.505"/>

    <Button
        android:id="@+id/LeaveMsg_But"
        android:text="@string/LeaveAMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="66dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        />
    <Button
        android:id="@+id/NearBy_But"
        android:text="@string/ReadNearbyNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0"/>
    <Button
        android:text="@string/ReadAllPrevious"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="132dp"/>


</android.support.constraint.ConstraintLayout>
